--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                         <img src="./images/search.png" alt="search icon">
                     </div>
                     <input placeholder="Marseille, France" type="text">
-                    <button type="submit">Rechercher</button>
+                    <button class="btn-search-desktop" type="submit">Rechercher</button>
+                    <button class="btn-search-mobile" type="submit"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></button>
                 </form>
                 <div class="list-container">
                     <h3>Filtres</h3>
@@ -58,7 +59,6 @@
                             <span>Nos pépites</span>
                         </div>
                     </div>
-
                 </div>
                 <div class="infobar">
                     <img src="./images//InfoIcon.png" alt="info icon">
