--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
     <div class="main-container">
         <header>
-            <div class="img-container">
+            <div class="header__img-container">
                 <img src="./images/logo/Booki.png" alt="logo">
             </div>
-            <div class="menu-container">
+            <div class="header__menu-container">
                 <a>Hébergements</a>
                 <a>Activités</a>
             </div>
@@ -299,7 +299,6 @@
                 <a href="#">Centre d'aide</a>
                 <a href="#"><span>Nous contacter</span></a>
             </div>
-
         </footer>
     </div>
 </body>
