--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <img src="./images/logo/Booki.png" alt="logo">
             </div>
             <div class="header__menu-container">
-                <a>Hébergements</a>
-                <a>Activités</a>
+                <a href="#hebergements">Hébergements</a>
+                <a href="#activity">Activités</a>
             </div>
         </header>
         <main>
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="hebergements-and-populaires">
-                <section class="hebergements">
+                <section id="hebergements" class="hebergements">
                     <h2>Hébergements à Marseille</h2>
                     <div class="bedroom-card-list">
                         <div class="bedroom-card">
@@ -167,7 +167,7 @@
                         </div>
 
                     </div>
-                    <h2 style="font-size: 18px;"> Afficher plus</h2>
+                    <h2> Afficher plus</h2>
 
                 </section>
                 <section class="populaires">
@@ -239,7 +239,7 @@
                     </div>
                 </section>
             </div>
-            <section class="activities">
+            <section id="activity" class="activities">
                 <div>
                     <h2>Activités à Marseille</h2>
 
