--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
                     <h2>Trouver votre hébergement pour des vacances de rêve</h2>
                     <p>En plein centre-ville ou en pleine nature</p>
                 </div>
-                <form action="/" method="get" class="search-bar">
+                <form class="search-bar" action="/" method="get">
                     <div>
                         <img src="./images/search.png" alt="search icon">
                     </div>
                     <input placeholder="Marseille, France" type="text">
                     <button class="btn-search-desktop" type="submit">Rechercher</button>
-                    <button class="btn-search-mobile" type="submit"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></button>
+                    <button class="btn-search-mobile" type="submit"><i class="fa-solid fa-magnifying-glass"
+                            style="color: #ffffff;"></i></button>
                 </form>
                 <div class="list-container">
                     <h3>Filtres</h3>
@@ -302,4 +303,5 @@
         </footer>
     </div>
 </body>
+
 </html>
